Trouble shooting select issue on iphone.

--- a/taskmanager/static/css/style.css
+++ b/taskmanager/static/css/style.css
@@ -124,26 +124,26 @@ main {
 
 /* CSS modifications for Materialize form */
 
-/* label color */
+/* label color
 .input-field label {
   color: #000;
 }
 
 /* label focus color */
-.input-field input[type=text]:focus+label {
+/* .input-field input[type=text]:focus+label {
   color: #04724D;
-}
+} */
 
 /* label underline focus color */
-.input-field input[type=text]:focus {
+/* .input-field input[type=text]:focus {
   border-bottom: 1px solid #04724D;
   box-shadow: 0 1px 0 0 #04724D;
-}
+} */
 
-/* valid color */.input-field input[type=text].valid {
-  border-bottom: 1px solid #04724D;
+/* valid color.input-field input[type=text].valid { */
+  /* border-bottom: 1px solid #04724D;
   box-shadow: 0 1px 0 0 #04724D;
-}
+} */ 
 
 /* Navbar */
 #nav-logo {
